<resources>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>

    <string name="app_name">Eat@Home</string>
    <string name="app_second_name">Common</string>
    <string name="login">Login</string>
    <string name="logged_as">Logged as: </string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Repeat Password</string>

    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="description">Description</string>

    <string name="action_confirm">Confirm</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">Add</string>
    <string name="action_call_rider">Call a rider</string>

    <string name="app">App</string>
    <string name="settings">Settings</string>
    <string name="app_info">App info</string>

    <string name="account_info">Account info</string>
    <string name="restaurant_info">Restaurant info</string>
    <string name="dish_info">Dish info</string>

    <string name="user_info">User info</string>

    <string name="rider_info">Rider info</string>

    <string name="alert_account_is_user">This account is associated with a customer.</string>
    <string name="alert_account_is_restaurateur">This account is associated with a restaurateur.</string>
    <string name="alert_account_is_rider">This account is associated with a rider.</string>
    <string name="login_as_customer">Please login with a customer account.</string>
    <string name="login_as_rider">Please login with a rider account.</string>
    <string name="login_as_restaurateur">Please login with a restaurateur aaccount.</string>

    <string name="menu">Menu</string>
    <string name="all_statistics">Your Statistics</string>
    <string name="most_popular_dishes">Most popular dishes</string>

    <string name="login_alert">You need to login to use the app</string>
    <string name="account_info_alert">You need to fill your account\'s info before continuing</string>
    <string name="logout_confirm_request">Are you sure do you want to logout?</string>
    <string name="alert_confirm_decline_order">Please confirm or decline this order</string>
    <string name="notify_save_ok">Info saved</string>
    <string name="notify_avatar_upload_ok">Avatar uploaded</string>
    <string name="notify_save_ko">Error while saving</string>
    <string name="notify_avatar_upload_ko">Error uploading avatar</string>

    <string name="notify_image_upload_ok">Image uploaded</string>
    <string name="notify_image_upload_ko">Error uploading image</string>
    <string name="notify_review_upload_ko">Error uploading your review</string>
    <string name="notify_image_download_ko">Error downloading image</string>

    <string name="notify_avatar_download_ko">Error downloading avatar</string>

    <string name="fields_empty_alert">Please fill all the fields</string>
    <string name="image_empty_alert">Please set an image</string>
    <string name="no_category_alert">Please set at least one Category</string>
    <string name="no_timetable_alert">Please set the time Table</string>
    <string name="alert_invalid_avg_time">Invalid value for the average time to complete an order</string>
    <string name="address_not_found"> Address NOT found</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="orders">Orders</string>

    <string name="restaurants">Restaurants</string>
    <string name="restaurant">Restaurant</string>

    <string name="delivery_detail">Delivery Details</string>
    <string name="current_deliveries">Current Deliveries </string>

    <string name="quantity">Quantity</string>

    <string name="dishes">Dishes</string>

    <string name="order_detail">Order details</string>

    <string name="restaurant_name">Restaurant\'s name</string>
    <string name="restaurant_email">Restaurant\'s email</string>
    <string name="restaurant_address">Restaurant\'s address </string>
    <string name="restaurant_description">Restaurant\'s description</string>
    <string name="restaurant_avg_time">Average time to prepare an order (min)</string>
    <string name="restaurant_phone_number">Restaurant\'s phone number</string>
    <string name="restaurant_categories">Restaurant\'s categories</string>
    <string name="restaurant_timetable">Restaurant\'s timetable</string>
    <string name="restaurant_distance">Distance from Restaurant</string>

    <string name="order_ready_time">Order should be ready at</string>
    <string name="delivery_time">Delivery time</string>
    <string name="delivery_distance">Distance from restaurant to customer</string>
    <string name="delivery_address">Delivery address </string>
    <string name="payment_info">Payment info</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer">Customer</string>
    <string name="rider_name">Rider Name</string>
    <string name="delivery_cost">Considering delivery cost of</string>
    <string name="pay_at_delivery_time">Pay at delivery time</string>

    <string name="address_notes">Address Notes</string>

    <string name="order_delivery">Order delivery</string>
    <string name="confirm_order">Confirm order</string>
    <string name="confirm_delivery">Confirm this delivery</string>
    <string name="decline_order">Decline order</string>
    <string name="order_total_cost">Total cost</string>
    <string name="your_earning">Your earning</string>

    <string name="date">Date</string>
    <string name="not_ready_alert">Not ready, please wait</string>

    <string name="total_cost">Total cost</string>
    <string name="rider_not_assigned">No riders assigned to this order yet</string>
    <string name="waiting_rider_confirm">Waiting for rider confirmation</string>
    <string name="order_status">Order status</string>
    <string name="delivery_cost_order">Delivery cost</string>
    <string name="status_confirmed">Confirmed</string>
    <string name="status_completed">Completed</string>
    <string name="status_waiting_corfirm">Waiting restarateur\'s confirmation</string>

    <string name="alert_no_orders_yet">There are no orders yet</string>
    <string name="alert_error_downloading_info">There was an error while downloading some data</string>

    <string name="search_radius">Search radius (Km)</string>
    <string name="get_directions">Get directions with Google Maps</string>
    <string name="choose_rider">Choose your rider</string>
    <string name="choose_another_rider">Pass this ordet to another rider</string>
    <string name="assign_automatically">Assign the order automatically</string>
    <string name="order_not_declined_alert">The order has not been declined because you haven\'t selected another rider</string>

    <string name="customer_info">Customer info</string>
    <string name="rate_your_rider">Rate your rider</string>
    <string name="rate_your_restaurant">Rate your restaurant</string>
    <string name="all_reviews">All the reviews</string>
    <string name="reviews">reviews</string>
    <string name="review">review</string>

    <string name="wrong_code">Wrong code</string>
    <string name="alert_restaurant_location">Cannot download restaurant location</string>

    <string name="route_not_ready">Please wait, the route is not ready</string>
    <string name="avarage_grade">Average grade:</string>
    <string name="best_work">Best work:</string>
    <string name="today_km">Daily km:</string>
    <string name="today_profit">Daily income:</string>
    <string name="monthly_km">Monthly km:</string>
    <string name="monthly_profit">Monthly income:</string>
    <string name="yearly_profit">Yearly income:</string>
    <string name="yearly_KM">Yearly km:</string>
    <string name="total_km">Total km:</string>
    <string name="total_profit">Total income:</string>

    <string name="today_dish_quantity">Daily dish quantity</string>
    <string name="month_dish_quantity">Monthly dish quantity</string>
    <string name="year_dish_quantity">Yearly dish quantity</string>
    <string name="total_dish_quantity">Total dish quantity</string>

    <string name="rider_stats">Your Statistics</string>
    <string name="rider_stats_daily">Your last daily incomes</string>
    <string name="rider_stats_monthly">Your monthly incomes (last 31 days)</string>
    <string name="rider_stats_yearly">Your yearly incomes</string>
    <string name="rate_rider">Rate rider</string>
    <string name="rate_restaurant">Rate restaurant</string>
    <string name="give_score">Give a score</string>
    <string name="write_comment">Write a comment</string>
    <string name="comment_here">Comment here</string>
    <string name="summary">Summary</string>

    <string name="excellent">Excellent</string>
    <string name="very_good">Very good</string>
    <string name="average">Average</string>
    <string name="poor">Poor</string>
    <string name="terrible">Terrible</string>

    <string name="favorite_title">Your favorite restaurants:</string>
    <string name="most_ordered_from">Restaurants from which you have ordered most often:</string>

    <string name="added_favorite">Added to your favorite list</string>
    <string name="removed_favorite">Removed from your favorite list</string>

    <string name="days_long">days</string>
    <string name="day_long">day</string>
    <string name="days_short">d</string>
    <string name="hours_long">hours</string>
    <string name="hour_long">hour</string>
    <string name="hours_short">h</string>
    <string name="minutes_long">minutes</string>
    <string name="minute_long">minute</string>
    <string name="minutes_short">m</string>

    <string name="top_requested">Top requested</string>

    <string name="alert_no_score">Please add a score to your review</string>
    <string name="alert_no_comment">Please add a comment to your review</string>
    <string name="delivery_time_title">Choose delivery time</string>

    <string name="alert_call_rider">This order should be ready in less than 15 minutes. Remember to call a rider.</string>

    <string name="delivery_time_message">Please choose a delivery time. Take into account that considering the time needed to prepare your order and to deliver it to the chosen address we will need at least</string>

    <string name="alert_no_reviews">There are no reviews</string>
</resources>
