<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_schedule_black"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_black"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_poll_stats"
            android:title="@string/all_statistics" />
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_star_24dp"
            android:title="@string/most_popular" />
    </group>

    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/nav_app_info"
                android:icon="@drawable/ic_info_outline_black"
                android:title="@string/app_info" />
        </menu>
    </item>

</menu>
